docs/css/index.css
@font-face {
  font-family: mountains;
  src: url(/fonts/MountainsofChristmas-Bold.ttf);
}

@font-face {
  font-family: dreamed_away;
  src: url(/fonts/poco.ttf);
}


@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes slide {
  0% { margin-top: -100px; }
  100% { margin-top 0; }
}

html, body {
  font-family: -apple-system, system-ui, BlinkMacSystemFont, Aptos, Roboto, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  height: 100%;
}

body {
  color: #ebede9;
  background-color: #090a14;
}

a {
  color: #e8c170;
  transition: all .5s ease-in;
  text-decoration: none;
}

a:hover {
  text-shadow: 0 0 4px #e8c170;
}

em {
  font-weight: bold;
}

.fade-in {
  opacity: 0;
  animation: fadeIn 2s;
  animation-fill-mode: forwards;
}

.fade-in.delayed {
  animation-delay: 1.5s;
}

.slide {
  animation: slide .5s ease-in;
}

nav {
  margin: 0 auto;
  padding: 20px 0;
  display: block;
  text-align: center;
  font-size: 1.3rem;
  background: rgba(0,0,0,.5);
  z-index: 1;
  position: absolute;
  left: 0;
  right: 0;
}

nav a {
  color: white;
  padding: 0 30px;
  font-family: mountains;
  display: inline-block;
  font-size: 1.6rem;
}

nav .socials a {
  padding: 0 10px;
}

nav a:hover {
  color: #e8c170;
  text-shadow: 0 0 12px #e8c170;
}

header {
  position: relative;
  max-width: 1920px;
  margin: 0 auto;
}

header .bars {
  font-size: 2em;
  padding: 4px 8px;
  background: #090a14;
  border: 4px solid #e8c170;
  border-radius: 4px;
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 10;
  cursor: pointer;
  display: none;
}

header img {
  width: 100%;
  object-fit: cover;
}

header .platforms {
  position: absolute;
  bottom: 10px;
  left: 10px;
}

.platform {
  display: inline-block;
  padding: 10px;
}

.platform img {
  height: 40px;
  width: auto;
}

.mobile-nav {
  position: fixed;
  z-index: 20;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: #090a14ee;
  display: none;
  opacity: 0;
}

.mobile-nav .menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 40px 0;
  font-size: 3em;
  font-weight: bold;
  font-family: mountains;
}

.mobile-nav .menu > * {
  padding: 20px 0;
}

.mobile-nav.active {
  display: block;
  opacity: 1;
  animation: fadeIn .3s;
  animation-fill-mode: forwards;
}

h2 {
  font-family: mountains;
  font-size: 4rem;
  line-height: 1.5;
  text-shadow: 0 0 12px #ebede9;
  margin: 40px 0;
}

h3 {
  font-family: mountains;
  font-size: 2rem;
  line-height: 1.5;
  text-shadow: 0 0 12px #ebede9;
  margin: 20px 0;
}

p {
  font-size: 1.3rem;
  line-height: 1.5;
  max-width: 800px;
  text-align: left;
  margin: 20px auto;
  /* text-indent: 40px; */
}

.main {
  max-width: 800px;
  margin: 0 auto;
}

.banner {
  margin: 0 auto;
  width: 100%;
  text-align: center;
  color: white;
  font-family: Helvetica, Arial, Sans-Serif;
  font-size: 1.5em;
  padding: 30px 0;
}

.banner.ks {
  background: #05ce78;
}

.banner img {
  height: 1em;
  vertical-align: middle;
}

.banner a {
  color: white;
}

.banner a:hover {
  text-decoration: underline;
}

article {
  padding: 60px 0;
  text-align: center;
}

article.socials {
  padding: 20px 0;
  /* margin-bottom: -40px; */
  font-size: 2em;
}

#trailer video {
  height: 500px;
  width: 889px;
}

#links .steam-widget {
  width: 646px;
  height: 190px;
  margin-bottom: 40px;
}

#links {
  background: linear-gradient(to bottom, #090a14, #0e2d44);
}

a.social {
  font-size: 2rem;
}

footer {
  font-size: 1.5rem;
  margin: 40px;
  text-align: center;
}

#media {
  background: #202e37;
}

.youtube-container {
  max-width: 900px;
  margin: auto;
  border: 6px solid #e8c170;
  border-radius: 8px;
}

.youtube {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

.youtube iframe {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
}

#ks-link {
  background: #05ce78;
  padding: 30px;
  font-family: mountains;
  font-size: 2rem;
}

#ks-link a {
  color: white;
}

#ks-link a:hover {
  text-decoration: underline;
}


#backer {
  background: linear-gradient(to bottom, #090a14, #0e2d44);
}

#backer img {
  max-width: 600px;
}


#rewards {
  background: linear-gradient(to bottom, #090a14, #371d37);
}

#rewards img {
  max-width: 600px;
}

@media (max-width: 1000px) {
  html {
    font-size: .8em;
  }

  header .bars {
    display: inline;
  }

  header nav {
    display: none;
  }

  #trailer video {
    height: auto;
    width: 90%;
  }

  #links .steam-widget {
    width: 420px;
    height: 220px;
  }

  .platform img {
    height: 20px;
  }

  p {
    width: 90%;
  }

  #rewards img {
    max-width: 100%;
  }
}

@media (max-width: 500px) {
  /* html { */
  /*   font-size: .6em; */
  /* } */

  header img {
    height: 500px;
  }

  article {
    padding: 30px 0;
  }
}

